Small z-index fix.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -2235,7 +2235,7 @@ table {
 .swimlaneOverlay {
   display: none; /* Hidden by default */
   position: absolute; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 10000; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
